--- a/index.ipynb
+++ b/index.ipynb
@@ -299,16 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Pyeongchang'"
+       "'San Antonio'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,16 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Toronto'"
+       "'Pyeongchang'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -362,19 +362,19 @@
        "'Toronto'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_canadian_city = top_travel_cities[-2]\n",
+    "top_canadian_city = top_travel_cities[-3]\n",
     "top_canadian_city"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "str"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,33 +587,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
-       " 'Buenos Aires',\n",
-       " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "top_travel_cities"
+    "top_travel_cities = ['Solta',\n",
+    " 'Greenville',\n",
+    " 'Buenos Aires',\n",
+    " 'Los Cabos',\n",
+    " 'Walla Walla Valley',\n",
+    " 'Marakesh',\n",
+    " 'Albuquerque',\n",
+    " 'Archipelago Sea',\n",
+    " 'Iguazu Falls',\n",
+    " 'Salina Island',\n",
+    " 'Toronto',\n",
+    " 'Pyeongchang']"
    ]
   },
   {
@@ -667,10 +656,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities.append('San Antonio')"
@@ -685,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +693,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1247,21 +1234,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
